# EasyIterator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: benchmark.yml  install.yml  macos.yml  style.yml  ubuntu.yml  windows.yml
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: CPM.cmake  EasyIteratorConfig.cmake.in
examples/: CMakeLists.txt  array.cpp  fibonacci.cpp  iteration.cpp
include/: easy_iterator.h
test/: CMakeLists.txt
test/source/: easy_iterator.cpp
tests/: CMakeLists.txt  easy_iterator.cpp
